fixed alignment issues in body

--- a/style.css
+++ b/style.css
@@ -14,30 +14,31 @@ footer {
     background-color: #C6B5E9;
     width: 100%;
     height: 250px;
-    margin-top: 40%;
+    margin-top: 30%;
     position: absolute;
     padding-top: 125px;
 }
 
 .inline-block {
-    display: inline-block;
+    display: inline-flex;
     padding: 10px;
     width: auto;
+    flex-wrap: nowrap;
 }
 
 .logo {
     width: 43%;
     padding: 1%;
-    float: left;
-    position: relative;
+    display: flex;
+    justify-content: left;
+    flex-wrap: nowrap;
 }
 
 nav {
     width: 83%;
     padding: 1%;
-    display: inline-block;
-    margin: auto;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 ul {
@@ -47,33 +48,44 @@ ul {
 }
 
 .content {
+    display: flex;
+    flex-direction: row;
     margin-top: 50px;
     margin-bottom: auto;
 }
 
+.hero {
+    display: flex;
+    padding-bottom: 75px;
+}
+
 .heroImg {
-    height: 400px;
-    width: 350px;
-    float: left;
-    margin-left: 15%;
+    margin-left: auto;
+    margin-right: 5%;
+    align-items: center;
+    display: flex;
+    width: 25%;
 }
 
 .bio {
-    margin-top: 150px;
-    margin-left: 50px;
-    display: inline-block;
-    width: 500px;
+    display: flex;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: auto;
+    width: 35%;
+    margin-top: 25px;
 }
 
 .buttonResume {
-    display: inline;
-    margin: 0 auto;
+    display: inline-block;
+    width: 400px;
+    height: 50px;
+    margin: auto;
     text-align: center;
     border-radius: 30px;
     border-width: 2px;
     border-color: #C6B5E9;
     background-color: #F3EDFF;
-    margin-left: 50px;
 }
 
 .contact {
@@ -86,36 +98,54 @@ ul {
     width: 300px;
     height: auto;
     display: inline-block;
-}
-
-.casestudies {
-    display: inline-block;
     margin-left: auto;
     margin-right: auto;
 }
 
+.casestudies {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    justify-content: center;
+    padding: 25px;
+}
+
 .accordion {
     background-color: #C6B5E9;
+    display: block;
     color: #000;
     cursor: pointer;
     padding: 18px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
     width: 100%;
     text-align: left;
-    border-radius: 30px;
+    border-top: 2px round #343434;
+    border-bottom: 2px round #343434;
+    border-left: none;
+    border-right: none;
     outline: none;
     transition: 0.4s;
+    max-width: 600px;
   }
   
   .active, .accordion:hover {
     background-color: #F3EDFF;
     border: 2px solid #C6B5E9;
+    border-left: none;
+    border-right: none;
   }
   
-
-  .panel {
-    padding: 0 18px;
-    background-color: white;
-    display: none;
-    overflow: hidden;
+  .accordion:after {
+    content: '\02795'; 
+    font-size: 13px;
+    color: #343434;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2796"; 
   }
 
